<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView android:id="@+id/tvCol_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/name"/>

    <TextView android:id="@+id/tvCol_Platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:textSize="18sp"
        android:text="@string/platform"/>

    <TextView android:id="@+id/tvCol_Completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:textSize="18sp"
        android:text="@string/completed_reduced"/>

    <TextView android:id="@+id/tvCol_Favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:textSize="18sp"
        android:text="@string/favourite_reduced"/>
</LinearLayout>
